# api

./: .codeclimate.yml  .dockerignore  .env.example  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  Dockerfile  README.md  app.json  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pr-title-checker.yml  publish.yml  test.yml
apps/: __init__.py
apps/authentication/: __init__.py  backend.py  serializers.py  tests.py  urls.py  views.py
apps/contests/: __init__.py  models.py
apps/contests/migrations/: 0001_initial.py
apps/users/: __init__.py  managers.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_alter_user_email_alter_user_password_and_more.py
apps/users/tests/: test_models.py
config/: .env.example
core/: exceptions.py  middlewares.py  models.py
docker/django/: Dockerfile  entrypoint.sh
docs/: requirements.txt
docs/source/: conf.py  getting-started.rst  index.rst  installation-guide.rst  tools-and-libraries.rst
scripts/: create-env.sh
server/: asgi.py  settings.py  urls.py  wsgi.py
server/settings/: __init__.py  base.py  ci.py  development.py  production.py
